--- a/app/pages/properties/editproperty/editproperty.component.html
+++ b/app/pages/properties/editproperty/editproperty.component.html
@@ -52,10 +52,9 @@
             </div>
             <div [formGroup]="propertyForm" class="col-md-9 subtype-filters-names">
                 <div class="tab-content card col-sm-12 col-md-12 col-lg-12">
-                <!--  Property Info  -->
-                    <!--
+                    <!--  Property Info  -->
                     <div id="metatab-info" class="active card-content" *ngIf="isLoad">
-                        <propertyinfo-cmp [name]="property" [group]="propertyForm" [property]="property" #propertyInfo></propertyinfo-cmp>
+                        <propertyinfo-cmp [group]="propertyForm" #propertyInfo></propertyinfo-cmp>
                     </div>
                     <!--
                     <div id="metatab-images" class="card-content">
