--- a/app/pages/properties/propertyinfo/propertyinfo.component.html
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.html
@@ -37,12 +37,13 @@
                         <label class="control-label">Select Region *</label>
                         <input class="form-control"
                                ng2-auto-complete
+                               formControlName="Region"
+                               [(ngModel)]="propertyForm.controls.Region.value"
                                [max-num-list]="10"
                                [source]="regionArray"
                                [list-formatter]="autocompleListFormatter"
                                value-property-name="Id"
                                display-property-name="Name"
-                               (valueChanged)="regionChanged($event)"
                                required>
                     </div>
                 </div>
