Initialize Children Allowed

--- a/app/pages/properties/propertyinfo/propertyinfo.component.html
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.html
@@ -282,17 +282,17 @@
                     <h5 class="listing-name col-sm-12 col-md-12 col-lg-12">Children Allowed</h5>
                     <div id="childrenAllow" class="listing-name radio col-sm-12 col-md-4 col-lg-4">
                         <label>
-                            <input type="radio" value="0" formControlName="ChildrenAllowed"> Children Welcome
+                            <input type="radio" [value]="0" formControlName="ChildrenAllowed"> Children Welcome
                         </label>
                     </div>
                     <div class="listing-name radio col-sm-12 col-md-4 col-lg-4">
                         <label>
-                            <input type="radio" value="1" formControlName="ChildrenAllowed"> Ask Owner
+                            <input type="radio" [value]="1" formControlName="ChildrenAllowed"> Ask Owner
                         </label>
                     </div>
                     <div class="listing-name radio col-sm-12 col-md-4 col-lg-4">
                         <label>
-                            <input type="radio" value="2" formControlName="ChildrenAllowed"> Not Suitable For Children
+                            <input type="radio" [value]="2" formControlName="ChildrenAllowed"> Not Suitable For Children
                         </label>
                     </div>
                 </div>
