--- a/app/pages/properties/metafilterheading/metafilterheading.component.html
+++ b/app/pages/properties/metafilterheading/metafilterheading.component.html
@@ -2,17 +2,17 @@
 	<h5>Housekeeping</h5>
     <div id="childrenAllow" class="radio">
         <label>
-            <input type="radio" checked="true" value="0" formControlName="Housekeeping"> Not Available
+            <input type="radio" [value]="0" formControlName="Housekeeping"> Not Available
         </label>
     </div>
     <div class="radio">
         <label>
-            <input type="radio" value="1" formControlName="Housekeeping"> Housekeeper Included
+            <input type="radio" [value]="1" formControlName="Housekeeping"> Housekeeper Included
         </label>
     </div>
     <div class="radio">
         <label>
-            <input type="radio" value="2" formControlName="Housekeeping"> Housekeeper Optional
+            <input type="radio" [value]="2" formControlName="Housekeeping"> Housekeeper Optional
         </label>
     </div>
 
