--- a/app/pages/properties/propertyimage/propertyimage.component.html
+++ b/app/pages/properties/propertyimage/propertyimage.component.html
@@ -1,4 +1,5 @@
 <div [formGroup]="propertyForm">
+    {{propertyForm.controls.Images.controls.value | json}}
 	<label class="form-control">Property Image</label>
 	<input type="file" class="btn btn-file" ng2FileSelect [uploader]="uploader" (change)="fileChange()" />
 </div>
@@ -10,7 +11,7 @@
     <!-- Loading Screen -->
     <div data-u="loading" style="position:absolute;top:0px;left:0px;background:url('') no-repeat 50% 50%;background-color:rgba(0, 0, 0, 0.7);"></div>
     <div data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:800px;height:356px;overflow:hidden;">
-        <div *ngFor="let item of images">
+        <div *ngFor="let item of propertyForm.controls.Images.value">
             <cl-image data-u="image" public-id="{{item.ImageId}}" cloud-name="privadia" class="md-card-image" crop="fill" quality="80" height="560" width="860" format="jpg">
             </cl-image>
             <cl-image data-u="thumb" public-id="{{item.ImageId}}" cloud-name="privadia" class="md-card-image" crop="fill" quality="80" height="72" width="72" format="jpg">
