--- a/app/pages/properties/metafilterheading/metafilterheading.component.html
+++ b/app/pages/properties/metafilterheading/metafilterheading.component.html
@@ -50,8 +50,7 @@
                     <input type="text"
                            [attr.type-id]="index"
                            class="name form-control"
-                           [formControl]="control.controls.Name"
-                           required />
+                           [formControl]="control.controls.Name"/>
                 </td>
                 <td class="form-group text-left">
                     <input type="number"
@@ -59,8 +58,7 @@
                            [attr.type-id]="index"
                            class="distance form-control"
                            value="0"
-                           [formControl]="control.controls.Distance"
-                           required />
+                           [formControl]="control.controls.Distance"/>
                 </td>
             </tr>
         </tbody>
