Fixed save PointsOfInterest

--- a/app/pages/properties/metafilterheading/metafilterheading.component.html
+++ b/app/pages/properties/metafilterheading/metafilterheading.component.html
@@ -45,7 +45,7 @@
                                class="checkbox"/>
                     </label>
                 </td>
-                <td class="form-group text-center"> {{control.controls.PointOfInterestTypeName.value}} </td>
+                <td class="form-group text-center"> {{control.controls.PointOfInterestTypeName.value}} {{i}}</td>
                 <td class="form-group text-left">
                     <input type="text"
                            [attr.type-id]="index"
