redesigned left sidebar

--- a/app/components/sidebar/sidebar.component.html
+++ b/app/components/sidebar/sidebar.component.html
@@ -14,9 +14,9 @@
         </div>
         <div class="info">
             <a data-toggle="collapse" href="#collapseExample" class="collapsed">
-                <span>Tania Andrew<b class="caret"></b></span>
+                <span>Tania Andrew</span>
             </a>
-            <div class="collapse" id="collapseExample">
+            <div class="collapse in" id="collapseExample">
                 <ul class="nav">
                     <li>
                         <a href="javascript:void(0)">
