fixed left sidebar

--- a/app/components/sidebar/sidebar.component.html
+++ b/app/components/sidebar/sidebar.component.html
@@ -5,7 +5,14 @@
         </a>
     </div>
 </div>
-
+<div class="navbar navbar-transparent">
+    <div class="navbar-minimize">
+        <button id="minimizeSidebar" class="btn btn-round btn-white btn-fill btn-just-icon">
+            <i class="material-icons visible-on-sidebar-regular">chevron_left</i>
+            <i class="material-icons visible-on-sidebar-mini">chevron_right</i>
+        </button>
+    </div>
+</div>
 <div class="sidebar-wrapper">
 
     <div class="user">
