--- a/app/components/shared/navbar/navbar.component.html
+++ b/app/components/shared/navbar/navbar.component.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-transparent navbar-absolute">
     <div class="container-fluid">
         <!--
-        <div class="navbar-minimize" *ngIf="false">
+        <div class="navbar-minimize">
             <button id="minimizeSidebar" class="btn btn-round btn-white btn-fill btn-just-icon">
-                <i class="material-icons visible-on-sidebar-regular">more_vert</i>
-                <i class="material-icons visible-on-sidebar-mini">view_list</i>
+                <i class="material-icons visible-on-sidebar-regular">chevron_left</i>
+                <i class="material-icons visible-on-sidebar-mini">chevron_right</i>
             </button>
         </div>
         -->
@@ -16,16 +16,9 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand navbar-left" href="{{getPath()}}"> {{getTitle()}} </a>
-            <div class="toolbar navbar-left">
-                <!-- Here you can write extra buttons/actions for the toolbar              -->
-                <button class="btn btn-simple btn-warning btn-icon pull-right secondary-color shadow-yellow" [routerLink]="['/properties/addproperty']">
-                    <i class="material-icons">add</i> Add
-                </button>
-            </div>
         </div>
         <div class="collapse navbar-collapse">
-            <!--
-            <ul class="nav navbar-nav navbar-right" *ngIf="false">
+            <ul class="nav navbar-nav navbar-right">
                 <li>
                     <a href="#pablo" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="material-icons">dashboard</i>
@@ -67,7 +60,6 @@
                 </li>
                 <li class="separator hidden-lg hidden-md"></li>
             </ul>
-            -->
             <form class="navbar-form navbar-right" role="search">
                 <div class="form-group form-search is-empty">
                     <input type="text" class="form-control" placeholder="Search">
