--- a/app/components/shared/navbar/navbar.component.html
+++ b/app/components/shared/navbar/navbar.component.html
@@ -35,6 +35,7 @@
                         </p>
                     </a>
                     <ul class="dropdown-menu">
+                        <!--
                         <li>
                             <a href="#">Mike John responded to your email</a>
                         </li>
@@ -50,6 +51,7 @@
                         <li>
                             <a href="#">Another One</a>
                         </li>
+                        -->
                     </ul>
                 </li>
                 <li>
@@ -65,7 +67,7 @@
                     <input type="text" class="form-control" placeholder="Search">
                     <span class="material-input"></span>
                 </div>
-                <button type="submit" class="btn btn-non-color btn-round btn-just-icon">
+                <button type="submit" class="btn btn-white btn-round btn-just-icon">
                     <i class="material-icons">search</i>
                     <div class="ripple-container"></div>
                 </button>
