--- a/app/pages/properties/properties.component.html
+++ b/app/pages/properties/properties.component.html
@@ -1,17 +1,17 @@
 <div class="main-content">
     <div class="container-fluid">
+        <div class="toolbar">
+            <!-- Here you can write extra buttons/actions for the toolbar              -->
+            <button class="btn btn-simple btn-success btn-icon pull-right secondary-color shadow-grey" [routerLink]="addPropertyLink"><i class="material-icons">add</i> Add Property</button>
+        </div>
         <div class="row">
             <div class="col-md-12">
                 <div class="card">
-                    <div class="card-header card-header-icon" data-background-color="purple">
+                    <div class="card-header card-header-icon" data-background-color="blue">
                         <i class="material-icons">assignment</i>
                     </div>
                     <div class="card-content">
-                        <h4 class="card-title">Properties</h4>
-                        <div class="toolbar">
-                            <!-- Here you can write extra buttons/actions for the toolbar              -->
-                            <button class="btn btn-simple btn-success btn-icon pull-right secondary-color shadow-grey" [routerLink]="addPropertyLink"><i class="material-icons">add_to_queue</i> Add Property</button>
-                        </div>
+                        <h4 class="card-title">All Properties</h4>
                         <div class="material-datatables">
                             <table id="datatables" class="table table-striped table-no-bordered table-hover" cellspacing="0" width="100%" style="width:100%">
                                 <thead>
