--- a/app/components/sidebar/sidebar.component.css
+++ b/app/components/sidebar/sidebar.component.css
@@ -3,7 +3,7 @@
 .logo a {
 	padding-left: 12px !important;
 	color: white !important;
-	font-size: 16pt !important;
+	font-size: 16px !important;
 	font-weight: 300;
 	text-align: left !important;
 }
@@ -24,7 +24,7 @@
 	display: none !important;
 }
 .info a, .info span {
-	font-size: 14pt !important;
+	font-size: 14px !important;
 	font-weight: 100;
 }
 i {
@@ -35,7 +35,7 @@ i {
 }
 p, span, a {
 	color: white;
-	font-size: 14pt !important;
+	font-size: 14px !important;
 	font-weight: 100;
 	text-align: left;
 }
