--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -60,7 +60,7 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 	border-radius: 5px;
 }
 .card-title {
-	font-size: 16pt;
+	font-size: 16px;
 	text-transform: uppercase;
 }
 
