--- a/app/pages/properties/addproperty/addproperty.component.html
+++ b/app/pages/properties/addproperty/addproperty.component.html
@@ -1,7 +1,7 @@
 <div class="main-content">
     <div class="container-fluid">
         <div class="row">
-            <form [formGroup]="propertyForm" (ngSubmit)="onSubmit()">
+            <form [formGroup]="propertyForm" (ngSubmit)="onSubmit()" class="col-xs-12">
                 <div class="card">
                     <div class="card-content p-b-15">
                         <ul class="nav nav-pills">
@@ -61,49 +61,49 @@
                             </li>
                         </ul>
                         <div class="tab-content">
-                                <!--  Property Info  -->
-                                <div id="metatab-info" class="active card-content" *ngIf="isLoad">
-                                    <propertyinfo-cmp [group]="propertyForm"></propertyinfo-cmp>
-                                </div>
-                                <!--  Property Image  -->
-                                <div id="metatab-images" class="card-content" *ngIf="isLoad">
-                                    <propertyimage-cmp [group]="propertyForm"></propertyimage-cmp>
-                                </div>
-                                <!--  Property Marketing  -->
-                                <div id="metatab-marketing" class="card-content">
-                                    <propertymarketing-cmp [group]="propertyForm"></propertymarketing-cmp>
-                                </div>
-
-                                <div class="card-content" id="metatab-property-4">
-                                    <property-metafilter-cmp *ngIf="mainService.metadata[3]"
-                                                             [group]="propertyForm"
-                                                             [metadata]="mainService.metadata[3]"></property-metafilter-cmp>
-                                </div>
-
-                                <div class="card-content" id="metatab-property-3">
-                                    <property-metafilter-cmp *ngIf="mainService.metadata[2]"
-                                                             [group]="propertyForm"
-                                                             [metadata]="mainService.metadata[2]" #localActivities></property-metafilter-cmp>
-                                </div>
-
-                                <div class="card-content" id="metatab-property-6">
-                                    <property-metafilter-cmp *ngIf="mainService.metadata[5]"
-                                                             [group]="propertyForm"
-                                                             [metadata]="mainService.metadata[5]" #features></property-metafilter-cmp>
-                                </div>
-
-                                <div class="card-content" id="metatab-property-2">
-                                    <property-metafilter-cmp *ngIf="mainService.metadata[1]"
-                                                             [group]="propertyForm"
-                                                             [metadata]="mainService.metadata[1]" #services></property-metafilter-cmp>
-                                </div>
-
-                                <div class="card-content" id="metatab-property-1">
-                                    <property-metafilter-cmp *ngIf="mainService.metadata[0]"
-                                                             [group]="propertyForm"
-                                                             [metadata]="mainService.metadata[0]" #trip></property-metafilter-cmp>
-                                </div>
+                            <!--  Property Info  -->
+                            <div id="metatab-info" class="active card-content p-l-r-none" *ngIf="isLoad">
+                                <propertyinfo-cmp [group]="propertyForm"></propertyinfo-cmp>
                             </div>
+                            <!--  Property Image  -->
+                            <div id="metatab-images" class="card-content p-l-r-none" *ngIf="isLoad">
+                                <propertyimage-cmp [group]="propertyForm"></propertyimage-cmp>
+                            </div>
+                            <!--  Property Marketing  -->
+                            <div id="metatab-marketing" class="card-content p-l-r-none">
+                                <propertymarketing-cmp [group]="propertyForm"></propertymarketing-cmp>
+                            </div>
+
+                            <div class="card-content" id="metatab-property-4 p-l-r-none">
+                                <property-metafilter-cmp *ngIf="mainService.metadata[3]"
+                                                         [group]="propertyForm"
+                                                         [metadata]="mainService.metadata[3]"></property-metafilter-cmp>
+                            </div>
+
+                            <div class="card-content" id="metatab-property-3 p-l-r-none">
+                                <property-metafilter-cmp *ngIf="mainService.metadata[2]"
+                                                         [group]="propertyForm"
+                                                         [metadata]="mainService.metadata[2]" #localActivities></property-metafilter-cmp>
+                            </div>
+
+                            <div class="card-content" id="metatab-property-6 p-l-r-none">
+                                <property-metafilter-cmp *ngIf="mainService.metadata[5]"
+                                                         [group]="propertyForm"
+                                                         [metadata]="mainService.metadata[5]" #features></property-metafilter-cmp>
+                            </div>
+
+                            <div class="card-content" id="metatab-property-2 p-l-r-none">
+                                <property-metafilter-cmp *ngIf="mainService.metadata[1]"
+                                                         [group]="propertyForm"
+                                                         [metadata]="mainService.metadata[1]" #services></property-metafilter-cmp>
+                            </div>
+
+                            <div class="card-content" id="metatab-property-1 p-l-r-none">
+                                <property-metafilter-cmp *ngIf="mainService.metadata[0]"
+                                                         [group]="propertyForm"
+                                                         [metadata]="mainService.metadata[0]" #trip></property-metafilter-cmp>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="text-center">
