--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -66,5 +66,19 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 
 
 
+/**
+ *  Margin and padding
+ */
+.m-l-r-none {
+	margin-left: 0px;
+	margin-right: 0px;
+}
+.p-l-r-none {
+	padding-left: 0px !important;
+	padding-right: 0px !important;
+}
+
+
+
 
 
